# proyecto-software-2022

./: README.md  wget-log
admin/: .gitignore  app.py  pyproject.toml
admin/public/: confirmation.js  error.css  index.js  style.css
admin/public/forms/: config-form.css  style.css
admin/public/layout/css/: pagination.css
admin/public/login/: style.css
admin/public/navbar/css/: styles.css
admin/public/navbar/js/: index.js
admin/public/report/css/: report-pdf.css  show-associated.css
admin/src/core/: database.py  seeds.py
admin/src/core/associates/: __init__.py  associate.py
admin/src/core/auth/: __init__.py  user.py
admin/src/core/config/: __init__.py  config.py
admin/src/core/disciplines/: __init__.py  discipline.py
admin/src/core/inscription/: __init__.py
admin/src/core/payment/: __init__.py  payment.py
admin/src/core/permissions/: __init__.py  permission.py  role.py
admin/src/core/serializer/: discipline.py  disciplineCant.py  license.py  payment.py  paymentinfo.py  user.py
admin/src/web/: __init__.py  config.py
admin/src/web/controllers/: api.py  associate.py  auth.py  config.py  discipline.py  inscription.py  issues.py  pagos.py  user.py
admin/src/web/helpers/: auth.py  discipline.py  handlers.py  permission.py
admin/src/web/templates/: error.html  home.html  index.html  layout.html  login.html
admin/src/web/templates/associates/: create.html  (+5 more)
admin/src/web/utils/: exporters.py  math.py  validations.py
admin/tests/: conftest.py  test_users.py
admin/tests/unit/: test_config_module.py  test_disciplines.py  test_users.py
(+55 files in other folders)
