[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Santiago dos Santos <santiiagodossantos@icloud.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
psycopg2-binary = "^2.9.3"
Flask-SQLAlchemy = "^2.5.1"
flask_weasyprint = "^1.0.0"
weasyprint = "^56.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
