[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Santiago dos Santos <santiiagodossantos@icloud.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
psycopg2-binary = "^2.9.3"
Flask-SQLAlchemy = "^2.5.1"
flask_weasyprint = "^1.0.0"
marshmallow = "^3.18.0"
Flask-Cors = "^3.0.10"
flask-qrcode = "^3.1.0"
marshmallow-enum = "^1.5.1"
Flask-JWT-Extended = "^4.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
